--- a/index.html
+++ b/index.html
@@ -55,33 +55,19 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[July/August] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
 <li>[4 June 2018] FAI 5.7 released and new ISO images available</a></li>
-<li>[16-20 May 2018] Thomas was at the MiniDebConf Hamburg and gave a
-<a href="/talks">talk</a></li>
 <li>[13 Mar 2018] FAI.me can now create cloud images, <a
 href="https://blog.fai-project.org/">blog post</a></li>
-<li>Thomas gave a <a
-href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">talk
-(video)</a>
-at the <a href="https://chemnitzer.linux-tage.de/">Chemnitzer
-Linuxtage</a>, <a href="doc/chemnitz-2018-faime.pdf">slides (in
-german)</a></li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
 
-<li>[18 Oct 2017] We had a great Debian cloud sprint in
-Seattle/Bellevue. We've created a <br>FAI <a
-href="https://salsa.debian.org/cloud-team/fai-cloud-images">config space</a> for  GCE, Azure,
-EC2 and Openstack cloud images
-</li>
 <li>[6 Oct 2017] <a
 href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
 </li>
 
-<li>[14 Oct 2016] <a
-href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a> </li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
