--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -38,7 +38,7 @@ All replies to this questionnaire are available at
 Thanks in advance Thomas
 <pre>
 ----------------------------------------------------------------
-last edited: november 5, 2010
+last edited: november 22, 2018
 
 How many hosts have you installed using fai? 
 Which version of fai are you using? 
@@ -62,10 +62,10 @@ Do you manage your configuration space under version control?
 How big is your config space (Mbytes, # of files)? 
 cd <to your config space> (/srv/fai/config by default)
 du -sh --exclude=.svn --exclude=basefiles
-find ! -type d | grep -v svn|grep -v cvs|wc -l
+find ! -type d | grep -v svn|grep -v cvs|fgrep -v .git|wc -l
 
 How many files do you have in ../config/files?
-find files ! -type d | grep -v svn|grep -v cvs|wc -l
+find files ! -type d | grep -v svn|grep -v cvs|fgrep -v .git|wc -l
 
 What types of scripts are you using for local customization?
 (shell, perl, cfengine, puppet, expect,...)
