--- a/reports/index.html
+++ b/reports/index.html
@@ -37,6 +37,55 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Reiner Schulz, R.lastname=dvz-mv.de
+<br><b>Date:</b> Wed, 24 Oct 2018 08:34:17 +0000
+<pre>
+How many hosts have you installed using fai? <b>300</b>
+Which version of fai are you using? <b>5.3.6</b>
+Which version are you using as your install kernel? plain Debian 8
+
+Which types of hosts are you installing with fai? Server as Web, mail, database with mysql, Postgresql, mariadb, 
+   Applicationserver with tomcat, jboss
+
+How do you boot your hosts? depends of network segment, most with DHCP an PXE, some with FAI-CD
+Does the default install kernel recognize all your hardware? Virtual machines yes, some type of physical needs its
+   own boot kernel (Fibrechannel, RAID)
+
+Do you manage your configuration space under version control? Git
+How big is your config space (Mbytes, # of files)? 6.6 G, #6623
+How many files do you have in ../config/files? #5515
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> Local government data center of Meckenburg-Vorpommern, Germany,
+<a href="http://www.dvz-mv.de">DVZ Datenverarbeitungszentrum Mecklenburg-Vorpommern GmbH</a>
+</pre> <HR>
+
+
+<b>From:</b> Marc SCHAEFER,  lastname @@alphanet .dot=ch
+<br><b>Date:</b> Thu, 6 Sep 2018 13:58:05 +0200
+<pre>
+How many hosts have you installed using fai? <b>~100</b> uniqe, multiple: > 1000 (reinstalling every year some things)
+Which version of fai are you using? <b>4.3.1+deb8u1</b>
+Which version are you using as your install kernel? generated with FAI
+     vmlinuz-3.16.0-4-amd64 (PC, apu2, server)
+     vmlinuz-3.2.0-4-486 (less and less alix)
+
+Which types of hosts are you installing with fai? desktops, cluster nodes, embedded systems, server (file, web, firewall, ...)
+
+How do you boot your hosts? via network PXE && DHCP
+Does the default install kernel recognize all your hardware?
+Which drivers are missing? sometimes issues with NVidia GFX cards on desktops
+
+Do you manage your configuration space under version control? yes, before CVS, currently SVN, soon GIT
+How big is your config space (Mbytes, # of files)? 1.1M, 125 files
+How many files do you have in ../config/files? 40
+
+What types of scripts are you using for local customization? shell, cfengine, sometimes perl
+
+<b>What is the business of your company/organisation?</b> free software consulting, embedded systems, security, <a href="http://www.cril.ch/">CRIL</a>
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Wed, 11 Jul 2018 12:16:02 +0200
 <pre>
