--- a/references/index.html
+++ b/references/index.html
@@ -132,6 +132,8 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/linuxhotel.png" ></a>
 <a href="https://alarm-dispatcher.de">
 <img class="imgframe" alt="FAI user" src="pics/alarm.png" ></a>
+<a href="https://www.dvz-mv.de">
+<img class="imgframe" alt="FAI user" src="pics/dvz.png" ></a>
 
 </span>
 
