--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,31 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 
 <p>
 <hr/>
+<b>From:</b> anonymous
+<br><b>Date:</b> Wed, 7 Nov 2018 11:54:56 +0100
+<pre>
+How many hosts have you installed using fai? <b>~120</b>
+Which version of fai are you using? <b>5.7, 3.4</b>
+Which version are you using as your install kernel? plain Debian 4.0.9
+
+Which types of hosts are you installing with fai?  compute servers (HPC cluster)
+
+How do you boot your hosts?
+ via network (PXE, DHCP): PXE
+
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? no
+
+Do you manage your configuration space under version control? Yes, Git
+
+How big is your config space (Mbytes, # of files)? 268K, 61
+How many files do you have in ../config/files? 13
+
+What types of scripts are you using for local customization? shell
+<b>What is the business of your company/organisation?</b> research group of a large electronics company
+</pre> <HR>
+
+
 
 <b>From:</b> Reiner Schulz, R.lastname=dvz-mv.de
 <br><b>Date:</b> Wed, 24 Oct 2018 08:34:17 +0000
@@ -52,8 +77,8 @@ Does the default install kernel recognize all your hardware? Virtual machines ye
    own boot kernel (Fibrechannel, RAID)
 
 Do you manage your configuration space under version control? Git
-How big is your config space (Mbytes, # of files)? 6.6 G, #6623
-How many files do you have in ../config/files? #5515
+How big is your config space (Mbytes, # of files)? 1.1 G, #6396
+How many files do you have in ../config/files? #5270
 What types of scripts are you using for local customization? shell
 
 <b>What is the business of your company/organisation?</b> Local government data center of Meckenburg-Vorpommern, Germany,
