ad url to fai examples

--- a/sources/index.html
+++ b/sources/index.html
@@ -34,7 +34,8 @@
 <div class="featurebox"><h3>
 <pre>git clone git://github.com/faiproject/fai.git</pre>
 </h3></div>
-<li> <A href="https://github.com/faiproject/fai">Browsable source code</A> via http
+<li> <A href="https://github.com/faiproject/fai">Browsable source code</A> via https
+<li> <A href="https://github.com/faiproject/fai-config">Browsable fai examples</A> via https
 <li> <a href="https://lists.uni-koeln.de/pipermail/linux-fai-commit/">git commit mails</a>
 <li> <a href="/NEWS">NEWS</A>: user visible changes of the sources
 <li> <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>
