FAI 5.7.3 released, new ISO's

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.7.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1012 MB)</span>
+<a href="/fai-cd/faicd64-large_5.7.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1007 MB)</span>
 </a>
 </span>
 </p>
@@ -56,8 +56,8 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[July/August] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
-<li>[4 June 2018] FAI 5.7 released and new ISO images available</a></li>
+<li>[3 Jan 2019] FAI 5.7.3 released and new ISO images available</a></li>
+<li>[July/August 2018] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
 <li>[13 Mar 2018] FAI.me can now create cloud images, <a
 href="https://blog.fai-project.org/">blog post</a></li>
 <li> <b>
