--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+`<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en">
@@ -33,8 +33,8 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.7.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (1012 MB) </span>
+<a href="faicd64-large_5.7.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (1007 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -48,8 +48,8 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.7.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (652 MB)</span>
+<a href="faicd64-small_5.7.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (648 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,7 +62,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.7.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.7.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
@@ -76,7 +76,7 @@ This image only installs Ubuntu 18.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.7.iso" style="text-decoration: none">
+<a href="faicd64-autodiscover_5.7.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (24 MB) </span>
 </a>
 </span>
@@ -88,7 +88,7 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All installation images use Debian stretch, FAI 5.7, kernel 4.9, amd64 architecture,
+All installation images use Debian stretch, FAI 5.7.3, kernel 4.9, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <br>
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
@@ -118,7 +118,7 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.7.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.7.3.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
