remove jessie isos

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -150,13 +150,13 @@ the installation media.
 <li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
 , <a href="https://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
 
-<li> <a href="../fai-cd-jessie">Old CD images</a>
+<!-- <li> <a href="../fai-cd-jessie">Old CD images</a>
 for Debian 8 aka jessie</li>
-</ul>
+</ul> -->
 
 <hr>
 <ADDRESS>
-Mon, 26 Feb 2018 12:45:15 +0100
+Thu, 03 Jan 2019 16:50:42 +0100
 </ADDRESS>
 
 
