--- a/reports/index.html
+++ b/reports/index.html
@@ -33,9 +33,35 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 
 <p>
 <a href="/references">Overview</a> with logos of some FAI users.
-
 <p>
 <hr/>
+
+<b>From:</b> Volker Epting, Fraunhofer Institute for Solar Energy Systems
+<br><b>Date:</b> Thu, 17 Jan 2019 09:30:41 +0100
+<pre>
+How many hosts have you installed using fai? <b>~300</b>
+Which version of fai are you using? Several versions comming from the debian repos.
+                                    At the moment jessie and stretch.
+Which version are you using as your install kernel? Always a plain debian kernel, sometimes from backports
+
+Which types of hosts are you installing with fai? desktops, servers, simulation machines, virtual machines, embedded systems
+
+How do you boot your hosts? DHCP, PXE
+Does the default install kernel recognize all your hardware?
+Which drivers are missing? Sometimes network or raid controller drivers
+Do you manage your configuration space under version control? Yes, with git
+
+How big is your config space (Mbytes, # of files)? 16MB, unfortunately with some small software in it, 203 files
+How many files do you have in ../config/files? 109 files
+What types of scripts are you using for local customization? shell, cfengine, python
+
+<b>What is the business of your company/organisation?</b> Research: <a href="https://www.ise.fraunhofer.de">Fraunhofer Institute for Solar Energy Systems (ISE)</a>
+<br><b>Additional comments:</b>
+For each distro a specific fai server is used.
+fai is positive because it is using existing tools that are stable and well known.
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Wed, 7 Nov 2018 11:54:56 +0100
 <pre>
