--- a/talks/index.html
+++ b/talks/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
       <title>FAI - Fully Automatic Installation</title>
       <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
@@ -128,6 +128,10 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 talk about d-i <a
 href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>, <a href="/doc/cmb-17-2.pdf">Slides</a>
 </ul>
+<li>Chemnitzer Linuxtag 2018: Talk:<a href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">FAI.me, ein Buildserver für individuelle Installationsmedien</a>
+(<a href="https://chemnitzer.linux-tage.de/2018/media/programm/papers/273_FAI.me_ein_Buildserver_f_r_individuelle_Installationsmedien_folien_chemnitz-2_pMBI7Us.pdf">slides</a>,
+<a href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273#video">video</a>)
+
 <li> MiniDebConf Hamburg 2018: FAI.me - A Build Service for Installation and Cloud Images
 (<a href="/doc/faime-minidebconf-2018.pdf">slides</a> <a href="https://meetings-archive.debian.net/pub/debian-meetings/2018/miniconf-hamburg/2018-05-20/fai.me.webm">video</a>)
 
@@ -160,7 +164,7 @@ and at
 <p>
 
 <ADDRESS>
-Tue, 07 Aug 2018 16:01:31 +0200
+Mon, 28 Jan 2019 11:28:44 +0100
 </ADDRESS>
 
       </div>
