--- a/references/index.html
+++ b/references/index.html
@@ -50,6 +50,8 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/brandwatch.png" ></a>
 <a href="http://www.cae.wisc.edu">
 <img class="imgframe" alt="FAI user" src="pics/cae.png" ></a>
+<a href="https://dropbox.com">
+<img class="imgframe" alt="FAI user" src="pics/dropbox.png" ></a>
 <a href="https://www.csail.mit.edu">
 <img class="imgframe" alt="FAI user" src="pics/csail.png" ></a>
 <a href="http://www.desy.de">
