--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="Title" content="FAI.me - build you own customized installation image" />
-      <title>FAI.me - build you own customized installation image</title>
+      <title>FAI.me - build you own customized cloud image</title>
       <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
 	  <!--[if lte IE 6]>
