add link to blog

--- a/talks/index.html
+++ b/talks/index.html
@@ -142,8 +142,14 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <li> <a href="https://debconf18.debconf.org/talks/84-using-fai-to-build-live-debian-images-for-arm-developer-boards/">Talk</a> by Riku Voipio: Using FAI to build Live debian images for ARM developer boards
 </li>
 
-
 </ul>
+
+
+<ul>
+<li><a href="http://blog.fai-project.org">Blog posts about FAI</a></li>
+</ul>
+
+
 
 
 
@@ -164,7 +170,7 @@ and at
 <p>
 
 <ADDRESS>
-Mon, 28 Jan 2019 11:28:44 +0100
+Mon, 30 Jan 2019 17:28:12 +0100
 </ADDRESS>
 
       </div>
