add hint how to start the image with kvm

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -144,6 +144,8 @@ keyboard-configuration</tt></li>
 
       <button name="submit_bttn" value="check">Create disk image</button>
 </form>
+Start this disk image with: <tt>kvm -m 500 -hda imagename</tt>
+<p>
 Any feedback is welcome. Send an email to FAI.me =at= fai-project.org
 
       </div>
