--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -41,6 +41,7 @@ contact before you start working.
 <ul>
 <li> --- TODO ---
 <li> more crazy features for FAI.me
+<li> make FAI.me web pages more dynamic (using Javascript?)
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
 <li> template engine for fcopy, for e.g simple variable substitution? 
@@ -60,7 +61,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Thu Mar  1 11:23:07 CET 2018
+Thu Jan  10 7:23:07 CET 2019
 </ADDRESS>
 
       </div>
