--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,7 +40,7 @@
 					overridden without any further confirmation</b>.</p>
 
 				<p>
-				<a href="#" onclick="toggle_visibility('advanced');" >Toggle</a> between advanced/basic settings
+				<a href="#" onclick="toggle_visibility('advanced');" >Toggle</a> between basic/advanced settings
 				</p>
 				<form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
 
