--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,30 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous
+<br><b>Date:</b> Thu, 21 Feb 2019 23:12:09 +0000
+<pre>
+How many hosts have you installed using fai? <b>Likely over 600</b>
+Which version of fai are you using? <b>Currently 5.7.4</b>, previously 5.3.6, and before that 4.3.1
+Which version are you using as your install kernel? Plain Debian kernel
+
+Which types of hosts are you installing with fai? Web server, mail server, thin client, workstation
+
+How do you boot your hosts? Custom USB stick with both EFI and BIOS mode
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? N/A
+Do you manage your configuration space under version control? Yes, subversion.
+
+How big is your config space (Mbytes, # of files)? 880K, 30
+How many files do you have in ../config/files? 30
+What types of scripts are you using for local customization? Bash/shell, PERL
+
+<b>What is the business of your company/organisation?</b> Aerospace
+<br><b>Additional comments:</b>
+FAI is a great tool that save me a lot of time.
+</pre> <HR>
+
+
 <b>From:</b> Volker Epting, Fraunhofer Institute for Solar Energy Systems
 <br><b>Date:</b> Thu, 17 Jan 2019 09:30:41 +0100
 <pre>
