--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -44,6 +44,9 @@ with FAI. (<a href="https://github.com/J0oo/FAI-Administration-Tool/commit/8be79
 <li> A <a href="https://www.ch.cam.ac.uk/computing/web-frontend-faimond">
 Web-frontend</a> to fai-monitor
 
+<li><a href="https://grml.org">Grml</a> is a bootable live system
+(Live-CD), which builds several ISO images using FAI.
+
 <li> <a href="http://www.openqrm.org">OpenQrm</a> has a FAI plugin for
 cloud deployments
 
