--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
 <!-- removed breadcrumb -->
 
 <p style="float:left; width: 65%">
-FAI is a non-interactive system to install and configure
+FAI is a tool for unattended mass deployment of Linux.
+It's a system to install and configure
 Linux systems and software packages on computers as well as
-virtual machines, from small networks to
+virtual machines, from small labs to
 large-scale infrastructures like clusters and virtual environments.
-It can be used for creating custom disk images used in virtual
-machines or on a cloud-computing platform.
-
-</p>
-<p style="float:left; width: 65%">
-It's a tool for unattended mass deployment of Linux. You can take one
+ You can take one
 or more virgin PC's, turn on the power, and after a few minutes,
 the systems are installed, and completely configured to your exact
 needs, without any interaction necessary.
+
+</p>
+<p style="float:left; width: 65%">
+It can be used for creating custom disk images used in virtual
+machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build service</a>.
 </p>
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
