--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -42,6 +42,7 @@ contact before you start working.
 <li> --- TODO ---
 <li> more crazy features for FAI.me
 <li> make FAI.me web pages more dynamic (using Javascript?)
+<li> UEFI support for fai-cd
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
 <li> template engine for fcopy, for e.g simple variable substitution? 
@@ -61,7 +62,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Thu Jan  10 7:23:07 CET 2019
+Tue, 05 Mar 2019 18:20:30 +0100
 </ADDRESS>
 
       </div>
