--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,35 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+
+<b>From:</b> fai-support = lihas +.de, Adrian Reyer
+<br><b>Date:</b> Fri, 15 Mar 2019 14:12:51 +0100
+<pre>
+How many hosts have you installed using fai? <b>220</b>
+Which version of fai are you using? latest version
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? desktops, cluster nodes, notebooks, web server
+
+How do you boot your hosts? DHCP, PXE, iPXE
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+
+Do you manage your configuration space under version control? yes
+
+How big is your config space (Mbytes, # of files)? 14MB, #1732
+How many files do you have in ../config/files? 276
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> <a href=" https://lihas.de/">LiHAS</a> - LinuxHaus Stuttgart
+<br><b>Additional comments:</b>
+We use FAI in different installations to
+ - deploy new servers and server clusters for customers
+ - deploy and update many similar clients for single customers, e.g. vpn-routers, workstations, ...
+</pre> <HR>
+
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Thu, 21 Feb 2019 23:12:09 +0000
 <pre>
