new iso images, new FAI version

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build 
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.8.1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1007 MB)</span>
+<a href="/fai-cd/faicd64-large_5.8.4~bpo9+2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (944 MB)</span>
 </a>
 </span>
 </p>
@@ -59,7 +59,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[14 Feb 2019] FAI 5.8.1 released and new ISO images available</a></li>
+<li>[28 Mar 2019] FAI 5.8.4 released and new ISO images available</a></li>
 <li>[July/August 2018] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
 <li>[13 Mar 2018] FAI.me can now create cloud images, <a
 href="https://blog.fai-project.org/">blog post</a></li>
