--- a/download/index.html
+++ b/download/index.html
@@ -39,15 +39,15 @@ The FAI software is divided in several packages:
 </ul>
 
 <ul>
-<li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list: 
+<li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list:
 <p>
 <div class="featurebox"><h3>
-<pre>deb https://fai-project.org/download jessie koeln</pre>
+<pre>deb https://fai-project.org/download stretch koeln</pre>
 </h3></div>
 or
 <p>
 <div class="featurebox"><h3>
-<pre>deb https://fai-project.org/download stretch koeln</pre>
+<pre>deb https://fai-project.org/download buster koeln</pre>
 </h3></div>
 
 <li> The packages are signed with the gpg key of Thomas Lange. Two ways of getting the gpg key in your apt configuration
@@ -57,8 +57,8 @@ or
 
 <p>
 
-<li> FAI packages from the official <A href=" https://fai-project.org/download/jessie/">project repository</A> or
-from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
+<li> FAI packages from the official <A href=" https://fai-project.org/download/stretch/">project repository</A> or
+from a <a href=http://deb.debian.org/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
 
