rename report menue entry, add link to basefiles, make serch field smaller

--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
 		<li><a href="/references/">References</a></li>
 		<li><a href="/features/" title="Features">Features</a></li>
 		<li><a href="/poster/">Poster / Flyer</a></li>
-		<li><a href="/reports/">User reports</a></li>
+		<li><a href="/reports/">Case studies</a></li>
 		<li><a href="/mailinglist/" title="Communication">Mailing Lists / IRC / Wiki</a></li>
 		<li><a href="/cluster/">Clusters built with FAI</a></li>
 	      </ul>
@@ -20,7 +20,7 @@
 	      <ul>
 		<li><a href="/fai-cd/" title="FAI CD">FAI CD</a></li>
 		<li><a href="/download/">Packages</a></li>
-		<li><a href="/questionnaire/" title="FAI Questionaire">FAI questionaire</a></li>
+		<li><a href="/download/basefiles/" title="Basefiles">Basefiles</a></li>
 	      </ul>
 	    </li>
 
@@ -49,7 +49,7 @@
 
 	 <form id="searchform" method="get" action="http://google.com/search">
 <p>
-  <input type="text"   name="q" size="17" maxlength="255" value=""/>
+  <input type="text"   name="q" size="13" maxlength="255" value=""/>
   <input type="hidden" name="q" value="site://fai-project.org"/>
   <input type="submit" name="btnG" value="Go" />
 </p>
