--- a/talks/index.html
+++ b/talks/index.html
@@ -142,6 +142,9 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <li> <a href="https://debconf18.debconf.org/talks/84-using-fai-to-build-live-debian-images-for-arm-developer-boards/">Talk</a> by Riku Voipio: Using FAI to build Live debian images for ARM developer boards
 </li>
 
+<li> <a href="https://ffg.guug.de">GUUG-Frühjahrsfachgespräch
+2019</a>: FAI.me Buildservice, <a href="../doc/faime-build-service-ffg-2019.pdf">Folien</a>
+
 </ul>
 
 
