--- a/talks/index.html
+++ b/talks/index.html
@@ -145,6 +145,9 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <li> <a href="https://ffg.guug.de">GUUG-Frühjahrsfachgespräch
 2019</a>: FAI.me Buildservice, <a href="../doc/faime-build-service-ffg-2019.pdf">Folien</a>
 
+<li><a href="https://www.radiotux.de/index.php?/archives/8050-RadioTux-Sendung-April-2019.html">Interview
+</a> (in German) during GUUG-Frühjahrsfachgespräch (from 0:35:30)</li>
+
 </ul>
 
 
@@ -173,7 +176,7 @@ and at
 <p>
 
 <ADDRESS>
-Mon, 30 Jan 2019 17:28:12 +0100
+Thu, 27 Jun 2019 16:22:15 +0200
 </ADDRESS>
 
       </div>
