--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -99,8 +99,8 @@ password will be generated </label>
 <br></br>
 
 <select name="suite" >
-                  <option value="stretch"> Debian 9 stable (stretch) </option>
-                  <option value="buster">Debian testing (buster) </option>
+                  <option value="stretch"> Debian 9 "stretch" (olstable) </option>
+                  <option value="buster">Debian 10 "buster" (stable) </option>
       </select> Select a distribution
 &ensp; &ensp;
 <span style="padding:0px !important;">
