--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -112,8 +112,8 @@
 
 					<p>
 					<select name="suite" >
-						<option value="stretch"> Debian 9 stable (stretch) </option>
-						<option value="buster">Debian testing (buster) </option>
+						<option value="stretch"> Debian 9 "stretch" (oldstable) </option>
+						<option	value="buster">Debian 10 "buster" (stable) </option>
 					</select> Distribution
 					&ensp; &ensp;
 					<span style="padding:0px !important;">
