add talk from 2005

--- a/talks/index.html
+++ b/talks/index.html
@@ -66,6 +66,10 @@ demo at the exhibition. <a href="../doc/lt-chemnitz-2004.pdf">Slides</a>.
 at the <a href="http://www.linux-events.de/LinuxPark/cebit05/LinuxForum/vortraege.html">LinuxPark</a>
 at Cebit 2005 in Hannover.
 
+
+<li> <a href="https://www.ukuug.org/events/linux2005/programme/abstract-TLange-1.shtml">Talk</a>
+at the <a href="https://www.ukuug.org/events/linux2005/programme/">Linux 2005 conference</a> of the UKUUG.
+
 <li> Debconf5 in Helsinki: <a href="../doc/debconf5.pdf">Slides</a>
 <li> <a href="http://www.linuxworldexpo.de/">LinuxWorld Conferen & Expo
 in Frankfurt 2005</a>: A GUI for FAI was presented.
