add comment how to sent bug reports

--- a/sources/index.html
+++ b/sources/index.html
@@ -45,8 +45,10 @@
 
 <h1>QA and Bugs</h1>
 <ul>
-<li> <a href="https://tracker.debian.org/pkg/fai">QA page</A> of FAI
-<li> <a href="https://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
+<li> <a href="https://tracker.debian.org/pkg/fai">QA page</A> of FAI</li>
+<li> <a href="https://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System (BTS)</li>
+<li> Send bug reports to the Debian BTS</li>
+<li> Patches are welcome via the BTS or as a pull request on Github or send an email to the mailing list</li>
 </ul>
 
 
