--- a/talks/index.html
+++ b/talks/index.html
@@ -76,7 +76,7 @@ in Frankfurt 2005</a>: A GUI for FAI was presented.
 
 <li> I gave a talk a LCA 2006. <a href="http://www.linux.org.au/conf/2006/">linux.conf.au</a> is Australia's national Linux conference and was held in Dunedin, New Zealand at the University of Otago.
 
-<li> <a href="http://www.froscon.org/wiki/FrOSCon">FrOSCon 2006</a>. <a href="../doc/froscon-2006.pdf">Slides of the talk</a>.
+<li> FrOSCon 2006: <a href="../doc/froscon-2006.pdf">Slides of the talk</a>.
 
 <li> <a href="http://www.linuxpodcast.de/index.php?id=77">Interview (audio)</a> with Thomas. (11/2006, made at the Linux world expo in cologne).
 <li> A talk at LinuxTag 2007.
@@ -150,8 +150,9 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 2019</a>: FAI.me Buildservice, <a href="../doc/faime-build-service-ffg-2019.pdf">Folien</a>
 
 <li><a href="https://www.radiotux.de/index.php?/archives/8050-RadioTux-Sendung-April-2019.html">Interview
-</a> (in German) during GUUG-Frühjahrsfachgespräch (from 0:35:30)</li>
+</a> (in German) during GUUG-Frühjahrsfachgespräch 2019 (from 0:35:30)</li>
 
+<li> FrOSCon 2019: talk in German about FAI.me service (<a href="../doc/froscon2019.pdf">slides</a>, <a href="https://media.ccc.de/v/froscon2019-2341-faime_ein_service_fur_individuelle_installationen">video</a>)
 </ul>
 
 
@@ -180,7 +181,7 @@ and at
 <p>
 
 <ADDRESS>
-Thu, 27 Jun 2019 16:22:15 +0200
+Mon, 12 Aug 2019 10:17:21 +0200
 </ADDRESS>
 
       </div>
