--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -72,13 +72,13 @@ fork of GOsa which is actively maintained.
 
 <ul>
 
-<li> <a href="https://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
+<li> <a href="https://wiki.fai-project.org/index.php/Variables">List</a>  of important variables
 inside FAI
 <li> <a href="/logs"> Log files</a> of successfully installed computers
 
 <li> <a href="/talks/">Talks</a>  of Thomas, the main author
 
- <li> A <a href="https://wiki.fai-project.org/wiki/FAI_Installation_Overview
+ <li> A <a href="https://wiki.fai-project.org/index.php/FAI_Installation_Overview
 ">visual overview</a> of how all the pieces of an FAI installation fit together.
 
 <li> <a
@@ -373,7 +373,7 @@ Short documentation</a> about FAI and etch.
 
 <hr>
 <address>
-Mon, 27 Mar 2017 15:58:56 +0200
+Wed, 04 Sep 2019 12:46:46 +0200
 </address>
 
       </div>
