--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,8 +33,8 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.8.4~bpo9+2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (944 MB) </span>
+<a href="faicd64-large_5.8.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
 &nbsp;
@@ -48,8 +48,8 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.8.4~bpo9+2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (591 MB)</span>
+<a href="faicd64-small_5.8.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (667 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,7 +62,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.8.4~bpo9+2.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.8.7.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
@@ -76,8 +76,8 @@ This image only installs Ubuntu 18.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.8.4~bpo9+2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Autodiscover CD &nbsp; (24 MB) </span>
+<a href="faicd64-autodiscover_5.8.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Autodiscover CD &nbsp; (29 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -88,11 +88,11 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All installation images use Debian stretch, FAI 5.8.4~bpo9+2, kernel 4.9, amd64 architecture,
+All installation images use Debian 10 aka buster, FAI 5.8.7, kernel 4.19, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <br>
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
-service</a></b>. This also supports Debian testing and stable with a
+service</a></b>. This also supports Debian 9 and 10 with a
 backports kernel.
 <HR>
 <p>
@@ -118,7 +118,7 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.8.4~bpo9+2.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.8.7.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
@@ -126,7 +126,7 @@ and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <h3>Short description for the FAI CD images</h3>
 <ul>
-<li> These installation images can install Debian 9 (XFCE and GNOME),
+<li> These installation images can install Debian 10 (XFCE and GNOME),
 Ubuntu 18.04 and CentOS 7, without the need of an install server
 <li> No network is needed and you can install the whole system from
 the installation media.
@@ -150,13 +150,13 @@ the installation media.
 <li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
 , <a href="https://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
 
-<!-- <li> <a href="../fai-cd-jessie">Old CD images</a>
-for Debian 8 aka jessie</li>
-</ul> -->
+<li> <a href="../fai-cd-stretch">Old CD images</a>
+for Debian 9 aka stretch</li>
+</ul>
 
 <hr>
 <ADDRESS>
-Thu, 03 Jan 2019 16:50:42 +0100
+Thu, 19 Sep 2019 16:31:47 +0200
 </ADDRESS>
 
 
