--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build 
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.8.4~bpo9+2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (944 MB)</span>
+<a href="/fai-cd/faicd64-large_5.8.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
 </a>
 </span>
 </p>
@@ -59,10 +59,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[28 Mar 2019] FAI 5.8.4 released and new ISO images available</a></li>
+<li>[19 Sep 2019] FAI 5.8.7 released, new ISO images available</a></li>
+<li>[August 2019] Thomas gave a <a href="https://media.ccc.de/v/froscon2019-2341-faime_ein_service_fur_individuelle_installationen">talk</a> at <a href="https://www.froscon.de">FrOSCon</a></li>
 <li>[July/August 2018] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
-<li>[13 Mar 2018] FAI.me can now create cloud images, <a
-href="https://blog.fai-project.org/">blog post</a></li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
