add backports support for bith releases, add options reboot and halt

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -105,7 +105,7 @@ password will be generated </label>
 &ensp; &ensp;
 <span style="padding:0px !important;">
 <input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
-backports for stretch including newer kernel</span>
+backports including newer kernel</span>
 <p></p>
 <select name="desktop" >
                   <option value="" selected="selected" >Plain text console, no X11 </option>
