add items, remove old one

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -40,9 +40,10 @@ contact before you start working.
 <h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- TODO ---
-<li> more crazy features for FAI.me
-<li> make FAI.me web pages more dynamic (using Javascript?)
+<li> add Ubuntu support to FAI.me service
+<li> add grub cmdline options to FAI.me service
 <li> UEFI support for fai-cd
+<li> more crazy features for FAI.me
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
 <li> template engine for fcopy, for e.g simple variable substitution? 
