--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -34,6 +34,9 @@ Network</a> is a project, that provides a FAI configuration for
 setting up a local network with centralized user and machine
 management.
 
+<li> <a href="https://wiki.debian.org/DebianEdu">DebianEdu</a> is
+using FAI for installing the clients
+
 <li>
 <a
 href="https://github.com/J0oo/FAI-Administration-Tool">FAI-Administration-Tool</a>
