--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[19 Sep 2019] FAI 5.8.7 released, new ISO images available</a></li>
+<li>[Oct 11-16 2019] Thomas will be in Boston, MA joining the Debian Cloud
+sprint</a></li>
+<li>[5 Oct 2019] FAI 5.8.9 released</a></li>
 <li>[August 2019] Thomas gave a <a href="https://media.ccc.de/v/froscon2019-2341-faime_ein_service_fur_individuelle_installationen">talk</a> at <a href="https://www.froscon.de">FrOSCon</a></li>
 <li>[July/August 2018] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
 <li> <b>
