--- a/cluster/index.html
+++ b/cluster/index.html
@@ -75,7 +75,7 @@ A detailed <A href=http://www.uni-koeln.de/bin2/maillist/linux-fai/20030213.1650
 <li>
 A 21 nodes AMD 1GHz Beowulf cluster called  <A href="http://www.uni-saarland.de/fak7/rieger/hydra/">hydra</a>
 <li>
-A 28 nodes AMD 1GHz  <A href="http://www.uni-koeln.de/rrzk/kompass/100/k10011a.html">Beowulf
+A 28 nodes AMD 1GHz  <A href="https://web.archive.org/web/20100529113707/http://www.uni-koeln.de:80/rrzk/kompass/100/k10011a.html">Beowulf
 cluster</a> build with FAI 2.5beta used for molecular thermodynamics and
 simulation
 <li>
@@ -96,13 +96,14 @@ but have the same functionality. They installed following clusters with
 lucie: Presto I, Presto II, Presto III, OBI Grid Cluster
 
 <li>
-<A href="http://www.math.sintef.no/vskoler/2001/notes/talk.pdf">Notes</A> and <a href=http://www.sintef.no/static/AM/vskoler/2001/notes/building_foils.pdf>
+<A href="https://www.sintef.no/globalassets/project/evitameeting/2001/building_notes.pdf">Notes</A> and
+<a href=https://www.sintef.no/globalassets/project/evitameeting/2001/building_foils.pdf>
 foils</a> of building a Beowulf cluster from a winter school in 2001.
 </ul>
 
 <HR>
 <ADDRESS>
-Wed, 26 Nov 2014 22:37:42 +0100
+Tue, 29 Oct 2019 13:38:54 +0100
 </ADDRESS>
 
       </div>
