--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -214,8 +214,9 @@ is using FAI as installer. Some <a href="http://wclp.sourceforge.net/documentati
 
 This project seems to be inactive since end of 2004.
 
-<li> <a href="http://www.math.sintef.no/vskoler/2001/notes/building_notes.pdf">Building
-a Beowulf cluster </a> (2001).
+<li> <a href="https://www.sintef.no/globalassets/project/evitameeting/2001/building_notes.pdf">Building
+a Beowulf cluster </a> (2001) (a href="https://www.sintef.no/globalassets/project/evitameeting/2001/building_foils.pdf
+">slides).
 
 
 <li> <a href="/download/misc/fai-solaris.tar.gz">FAI for Solaris</a> is an older
@@ -314,7 +315,7 @@ English and German which also cover FAI:
 <li> An <a href="http://www.golem.de/0408/33190.html">interview</a>
 with Thomas Lange (8/2004).
 
-<li>An <a href="http://www.uni-koeln.de/rrzk/kompass/100/k10011a.html">article</a>
+<li>An <a href="https://web.archive.org/web/20100529113707/http://www.uni-koeln.de:80/rrzk/kompass/100/k10011a.html">article</a>
 about the installation of a Beowulf Cluster used for physical chemistry research.
 <li> An <a href="http://www.rz.uni-augsburg.de/connect/2002-01/linux/linux.pdf">article</a> about the use of FAI at the university of Augsburg.
 
@@ -377,7 +378,7 @@ Short documentation</a> about FAI and etch.
 
 <hr>
 <address>
-Thu, 03 Oct 2019 10:34:43 +0200
+Tue, 29 Oct 2019 13:39:44 +0100
 </address>
 
       </div>
