--- a/cluster/index.html
+++ b/cluster/index.html
@@ -71,13 +71,14 @@ The university of California Santa Barbara has a
 23 nodes with Athlon XP are used by the TIK Experimental <a href="http://www.tik.ee.ethz.ch/~ddosvax/cluster/">Cluster Scylla</a>. (2004)
 <li>
 A 21 nodes with dual XEON 2.4GHz Beowulf cluster called  <A href="http://www.uni-saarland.de/fak7/rieger/shiva/">shiva</A> build with FAI 2.4beta.
-A detailed <A href=http://www.uni-koeln.de/bin2/maillist/linux-fai/20030213.165028/>report</A>
+A detailed <A href=https://lists.uni-koeln.de/pipermail/linux-fai/2003-February/001282.html>report</A>
+
 <li>
 A 21 nodes AMD 1GHz Beowulf cluster called  <A href="http://www.uni-saarland.de/fak7/rieger/hydra/">hydra</a>
 <li>
 A 28 nodes AMD 1GHz  <A href="https://web.archive.org/web/20100529113707/http://www.uni-koeln.de:80/rrzk/kompass/100/k10011a.html">Beowulf
 cluster</a> build with FAI 2.5beta used for molecular thermodynamics and
-simulation
+simulation. <a href="../doc/RRZK-04.pdf">German article page 20ff</a>.
 <li>
 A <a href=http://g7-mac3.fy.chalmers.se/cgi-bin/twiki/view/Forte/WebHome>cluster</a>
 at the department of Physical Resource Theory at the Chalmers University of Technology in Gothenburg/ Sweden. 10 Nodes with
