--- a/talks/index.html
+++ b/talks/index.html
@@ -29,7 +29,7 @@
 <h3>Talks and other activities of Thomas Lange</h3>
 
 <ul>
-<li>  <a href="../doc/fai_tutorial_1999.ps.gz">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.de/1999"> 6th International Linux Kongress </a>, Augsburg, Germany; 
+<li>  <a href="../doc/fai_tutorial_1999.ps.gz">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.org/1999/"> 6th International Linux Kongress </a>, Augsburg, Germany; 
 <li> Die voll automatische Installation eines Linux Clusters; october 20, 1999; Institut f&uuml;r Computergraphik, TU Wien, &Ouml;sterreich
 <li> <a href="suninstall_vortrag.tar.gz"> Die (voll-) automatische Installation eines Sun Clusters in der Informatik</a> ; april 28, 1999, RRZK, Universit&auml;t zu K&ouml;ln, german
 <li> Die voll automatische Installation eines Linux Clusters; january 11, 2000, Linux-Workshop, Uni K&ouml;ln
@@ -40,9 +40,9 @@
 
 <li> <a href="../doc/bordeaux2001.pdf"> FAI - a tool for the fully automatic installation of Debian GNU/Linux</a>; july 2-5, 2001, Debian Conference one, Bordeaux
 
-<li> <a href="../doc/lk2001-talk.pdf">FAI - Fully Automatic Installation of Debian GNU/Linux</a>; november 29, 2001 <a href="http://www.linux-kongress.de/2001/">Linux Kongress 2001</a>
+<li> <a href="../doc/lk2001-talk.pdf">FAI - Fully Automatic Installation of Debian GNU/Linux</a>; november 29, 2001 <a href="http://www.linux-kongress.org/2001/">Linux Kongress 2001</a>
 
-<li> I've led a BOF at <a href="http://www.usenix.org/events/lisa2001/"> Lisa 2001</a> conference Dec 2-7, 2001 in San Diego
+<li> I've led a BOF at <a href="https://www.usenix.org/legacy/events/lisa2001/"> Lisa 2001</a> conference Dec 2-7, 2001 in San Diego
 
 <li> <a href="../doc/heidelberg2002.pdf"> Automatische Installationen mit FAI</a>; may, 2002, Heidelberg
 
@@ -90,15 +90,15 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 
 <li> An interview (video) in german with Thomas (OSMB 2008).
 
-<li> A talk at <a href="http://glt09.linuxtage.at/">Linuxtage Graz 2009</a>
-(<a href="http://glt09.linuxtage.at/?id=36">slides</a>)
+<li> A talk at <a href="https://glt09.linuxtage.at/">Linuxtage Graz 2009</a>
+(<a href="https://glt09.linuxtage.at/?id=36">slides</a>)
 
-<li> A talk at <a href="http://www.guug.de/veranstaltungen/ffg2010">FFG 2010</a> (GUUG Fr&uuml;hjahrsfachgespr&auml;ch)
+<li> A talk at <a href="http://www.guug.de/veranstaltungen/ffg2010/">FFG 2010</a> (GUUG Fr&uuml;hjahrsfachgespr&auml;ch)
 <li> A talk at the <a href="http://www.netways.de/osdc/y2010">OSDC</a> (Open Source Data Center Conference 2010)
 <li> A talk at the <a href="http://www.netways.de/osdc/y2011">OSDC</a> (Open Source Data Center Conference 2011)
 <a href="../doc/osdc-2011.pdf">(Slides)</a>
 
-<li> A short talk at the <a href="http://sysadmin.miniconf.org/programme15.html">
+<li> A short talk at the <a href="https://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
 <a href="../doc/lca2015-thomas_lange-fai.pdf">Slides</a>, 
 <a href="../videos/FAI_the_universal_deployment_tool.webm">Video</a>, 
@@ -112,7 +112,7 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 <a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/FAI_the_universal_deployment_tool.webm">video</a>
 
 <li> Lighning talk with a demo of FAI 5.0 at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a>,
-<a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>, <a href="/videos/fai-fosdem-2016.mp4">Video</a>
+<a href="https://archive.fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>, <a href="/videos/fai-fosdem-2016.mp4">Video</a>
 
 <li> <a href="https://debconf16.debconf.org/talks/3/">Thomas gave two
 live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
@@ -157,7 +157,7 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 
 
 <ul>
-<li><a href="http://blog.fai-project.org">Blog posts about FAI</a></li>
+<li><a href="https://blog.fai-project.org">Blog posts about FAI</a></li>
 </ul>
 
 
