--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -38,8 +38,9 @@ All replies to this questionnaire are available at
 Thanks in advance Thomas
 <pre>
 ----------------------------------------------------------------
-last edited: november 22, 2018
+last edited: november 18, 2019
 
+Are you using the FAI.me build service? 
 How many hosts have you installed using fai? 
 Which version of fai are you using? 
 Which version are you using as your install kernel? 
